--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,12 +35,13 @@ dependencies = [
     "cactus-test-definitions @ git+https://github.com/bsgip/cactus-test-definitions.git@main",
     "envoy-schema>=0.27.0",
     "rich",
+    "treelib",
     "aiohttp>=3.11.12,<4",
 ]
 
 [project.optional-dependencies]
 dev = ["bandit", "black", "coverage", "flake8", "flake8-bugbear", "mypy"]
-test = ["pytest"]
+test = ["assertical", "pytest"]
 
 [tool.setuptools.package-data]
 "my_app" = ["py.typed"]
