--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,14 @@ description = "Tools for evaluating a CSIP Aus server implementation via a virtu
 dependencies = [
     "cactus-test-definitions @ git+https://github.com/bsgip/cactus-test-definitions.git@main",
     "envoy-schema>=0.27.0",
-    "rich",
-    "treelib",
+    "rich>=14.1.0,<15",
+    "treelib>=1.8.0,<2",
     "aiohttp>=3.11.12,<4",
     "pyyaml>=6.0.2,<7",
     "dataclass-wizard>=0.35.0,<1",
+    "pydantic_xml[lxml]>=2.11.7,<3",
+    "reportlab>=4.4.1,<5",
+
 ]
 
 [project.optional-dependencies]
@@ -50,11 +53,13 @@ dev = [
     "flake8-bugbear",
     "mypy",
     "types-PyYAML",
+    "lxml-stubs",
+    "types-reportlab",
 ]
-test = ["assertical", "pytest"]
+test = ["assertical", "pytest", "freezegun"]
 
 [tool.setuptools.package-data]
-"cactus_client" = ["py.typed"]
+"cactus_client" = ["py.typed", "**/*.xsd"]
 
 [project.scripts]
 cactus = "cactus_client.main:cli_entrypoint"
