--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dev = [
     "lxml-stubs",
     "types-reportlab",
 ]
-test = ["assertical", "pytest", "pytest-aiohttp", "freezegun"]
+test = ["assertical", "pytest", "pytest-aiohttp", "freezegun", "cryptography"]
 
 [tool.setuptools.package-data]
 "cactus_client" = ["py.typed", "**/*.xsd"]
