--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,10 +29,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cactus_client"
-version = "0.0.1"
+dynamic = ["version", "readme"]
 description = "Tools for evaluating a CSIP Aus server implementation via a virtual client"
 dependencies = [
-    "cactus-test-definitions @ git+https://github.com/bsgip/cactus-test-definitions.git@main",
+    "cactus-test-definitions>=1.0.0",
     "envoy-schema>=0.27.0",
     "rich>=14.1.0,<15",
     "treelib>=1.8.0,<2",
@@ -41,6 +41,7 @@ dependencies = [
     "dataclass-wizard>=0.35.0,<1",
     "pydantic_xml[lxml]>=2.11.7,<3",
     "reportlab>=4.4.1,<5",
+    "cryptography",
 
 ]
 
@@ -60,6 +61,11 @@ test = ["assertical", "pytest", "pytest-aiohttp", "freezegun", "cryptography"]
 
 [tool.setuptools.package-data]
 "cactus_client" = ["py.typed", "**/*.xsd"]
+
+[tool.setuptools.dynamic]
+version = { attr = "cactus_client.__version__" }
+readme = { file = ["README.md"], content-type = "text/markdown" }
+
 
 [project.scripts]
 cactus = "cactus_client.cli.main:cli_entrypoint"
