Migrated to cactus-schema

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dynamic = ["version", "readme"]
 description = "Tools for evaluating a CSIP Aus server implementation via a virtual client"
 dependencies = [
     "cactus-test-definitions==1.8.3",
-    "cactus-client-notifications==0.0.5",
+    "cactus-schema>=0.0.4",
     "envoy-schema>=0.30.0",
     "rich>=14.1.0,<15",
     "treelib>=1.8.0,<2",
